force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <pluralLabel>Loans</pluralLabel>
    <description>added from sfdx plugin</description>
    <nameField>
        <type>AutoNumber</type>
        <label>Name</label>
        <displayFormat>Loan-{0000000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>