force-app/main/default/objects/Loan__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>