force-app/main/default/objects/Loan__c/fields/Broker_Status__c.field-meta.xml
<CustomField>
    <label>Broker Status</label>
    <type>Picklist</type>
    <fullName>Broker_Status__c</fullName>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Watch List</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>