force-app/main/default/objects/Loan__c/fields/Broker_Tier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Tier__c</fullName>
    <label>Broker Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Account</fullName>
                <default>true</default>
                <label>Key Account</label>
            </value>
            <value>
                <fullName>Non Key Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>