force-app/main/default/objects/Loan__c/fields/Client_Risk_Rating__c.field-meta.xml
<CustomField>
    <label>Client Risk Rating</label>
    <type>Number</type>
    <fullName>Client_Risk_Rating__c</fullName>
    <scale>0</scale>
    <precision>15</precision>
</CustomField>