force-app/main/default/objects/Loan__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <label>Credit Score</label>
    <type>Number</type>
    <fullName>Credit_Score__c</fullName>
    <scale>0</scale>
    <precision>15</precision>
</CustomField>