force-app/main/default/objects/Loan__c/fields/Credit_Score_Borrower_2__c.field-meta.xml
<CustomField>
    <label>Credit Score Borrower 2</label>
    <type>Number</type>
    <fullName>Credit_Score_Borrower_2__c</fullName>
    <scale>0</scale>
    <precision>15</precision>
</CustomField>