force-app/main/default/objects/Loan__c/fields/Current_Term_In_Months__c.field-meta.xml
<CustomField>
    <label>Current Term (in Months)</label>
    <type>Number</type>
    <fullName>Current_Term_In_Months__c</fullName>
    <scale>0</scale>
    <precision>15</precision>
</CustomField>