force-app/main/default/objects/Loan__c/fields/Employment_Status_Borrower_2__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_Borrower_2__c</fullName>
    <label>Employment Status Borrower 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commissions</fullName>
                <default>true</default>
                <label>Commissions</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>