force-app/main/default/objects/Loan__c/fields/Global_Debt_Servicing_Ratio__c.field-meta.xml
<CustomField>
    <label>Global Debt/Servicing ratio</label>
    <type>Number</type>
    <fullName>Global_Debt_Servicing_Ratio__c</fullName>
    <scale>2</scale>
    <precision>15</precision>
</CustomField>