force-app/main/default/objects/Loan__c/fields/Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Id__c</fullName>
    <externalId>true</externalId>
    <label>Loan Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>