force-app/main/default/objects/Loan__c/fields/Loan_To_Value__c.field-meta.xml
<CustomField>
    <fullName>Loan_To_Value__c</fullName>
    <label>Loan to Value</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>