force-app/main/default/objects/Loan__c/fields/Mortgage_Position__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Position__c</fullName>
    <label>Mortgage Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>