force-app/main/default/objects/Loan__c/fields/Mortgage_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Purpose__c</fullName>
    <label>Mortgage Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equity Takeout</fullName>
                <default>true</default>
                <label>Equity Takeout</label>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Purchase Rent to Own</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Refinance for Debt Consolidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>