force-app/main/default/objects/Loan__c/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <default>true</default>
                <label>Owner</label>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Rent To Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>