force-app/main/default/objects/Loan__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment High Rise</fullName>
                <default>true</default>
                <label>Apartment High Rise</label>
            </value>
            <value>
                <fullName>Apartment Low Rise</fullName>
            </value>
            <value>
                <fullName>Row</fullName>
            </value>
            <value>
                <fullName>Semi-detached</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>