force-app/main/default/objects/Loan__c/fields/Self_Employed__c.field-meta.xml
<CustomField>
    <label>Self-Employed?</label>
    <type>Checkbox</type>
    <fullName>Self_Employed__c</fullName>
    <defaultValue>false</defaultValue>
</CustomField>