force-app/main/default/objects/Loan__c/fields/Stage__c.field-meta.xml
<CustomField>
    <label>Stage</label>
    <type>Picklist</type>
    <fullName>Stage__c</fullName>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>