force-app/main/default/objects/Loan__c/fields/Total_Debt_Servicing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_Servicing_Ratio__c</fullName>
    <label>Total Debt/Servicing ratio</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>