force-app/main/default/objects/Loan__c/listViews/Loans_Closed.listView-meta.xml
<ListView>
    <fullName>Loans_Closed</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Amount__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Loan_To_Value__c</columns>
    <columns>Employment_Status__c</columns>
    <columns>Interest_Rate__c</columns>
    <columns>Mortgage_Purpose__c</columns>
    <columns>Occupancy_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Approved,Declined</value>
    </filters>
    <label>Approved/Declined Loans</label>
</ListView>